--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Fetch all history for git info
-          submodules: "true"
+      - name: Clone content
+        run: git clone https://github.com/blackgolyb/B.git content
       - uses: actions/setup-node@v4
         with:
           node-version: 22
