feat: replace content mock to real base

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           fetch-depth: 0 # Fetch all history for git info
       - name: Clone content
-        run: git clone https://github.com/blackgolyb/B.git content
+        run: git clone https://github.com/ulyagram77/university-knowledge-hub content
       - uses: actions/setup-node@v4
         with:
           node-version: 22
